fix z-index issue and put back some close buttons that were gone

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -210,17 +210,6 @@ hr {
   height: 100%;
 }
 
-
-/*.programs-day-header {
-  position: fixed;
-  margin: 0px auto;
-  text-align: center;
-  width: 100%;
-  background-color: rgb(187, 202, 222);
-  top: 20px;
-  z-index: 999;
-}*/
-
 .programs-day-header h1 {
   font-size: 1.5em;
 }
@@ -230,7 +219,7 @@ hr {
   background-color: #262739;
   position: fixed;
   width: 100%;
-  z-index: 1000;
+  z-index: 2;
 }
 
 .nav-title {
@@ -299,9 +288,7 @@ hr {
 {
   width: 0;
   height: 0;
-  border: 0.313em solid transparent; /* 5 */
-  border-bottom: none;
-  border-top-color: #262739;
+  border: 0px;
   content: '';
   vertical-align: middle;
   display: inline-block;
